sfSandBoxCode/force-app/main/default/objects/Area__c/fields/Area_Abbreviation__c.field-meta.xml
<CustomField>
    <fullName>Area_Abbreviation__c</fullName>
    <description>Area Abbreviation e.g KR , KN ,VW</description>
    <inlineHelpText>Area Abbreviation e.g KR , KN ,VW</inlineHelpText>
    <label>Area Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>