sfSandBoxCode/force-app/main/default/objects/Area__c/fields/Customer_Support_CSA_EmployeeGUID__c.field-meta.xml
<CustomField>
    <fullName>Customer_Support_CSA_EmployeeGUID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Support CSA EmployeeGUID</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Areas (Customer Support CSA EmployeeGUID)</relationshipLabel>
    <relationshipName>Areas1</relationshipName>
    <type>Lookup</type>
</CustomField>