sfSandBoxCode/force-app/main/default/objects/Area__c/fields/Customer_Support_CSA_SF_User_Acct__c.field-meta.xml
<CustomField>
    <fullName>Customer_Support_CSA_SF_User_Acct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Support CSA SF User Acct</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Areas1</relationshipName>
    <type>Lookup</type>
</CustomField>