sfSandBoxCode/force-app/main/default/objects/Area__c/fields/GPS_Coordinate_10__c.field-meta.xml
<CustomField>
    <fullName>GPS_Coordinate_10__c</fullName>
    <description>10th GPS Coordinate</description>
    <inlineHelpText>10th GPS Coordinate</inlineHelpText>
    <label>GPS Coordinate 10</label>
    <scale>10</scale>
    <type>Location</type>
</CustomField>