sfSandBoxCode/force-app/main/default/objects/Area__c/fields/GPS_Coordinate_11__c.field-meta.xml
<CustomField>
    <fullName>GPS_Coordinate_11__c</fullName>
    <description>11th GPS Coordinate</description>
    <inlineHelpText>11th GPS Coordinate</inlineHelpText>
    <label>GPS Coordinate 11</label>
    <scale>10</scale>
    <type>Location</type>
</CustomField>