sfSandBoxCode/force-app/main/default/objects/Area__c/fields/GPS_Coordinate_12__c.field-meta.xml
<CustomField>
    <fullName>GPS_Coordinate_12__c</fullName>
    <description>12th GPS Coordinate</description>
    <inlineHelpText>12th GPS Coordinate</inlineHelpText>
    <label>GPS Coordinate 12</label>
    <scale>10</scale>
    <type>Location</type>
</CustomField>