sfSandBoxCode/force-app/main/default/objects/Area__c/fields/Last_Location_No__c.field-meta.xml
<CustomField>
    <fullName>Last_Location_No__c</fullName>
    <label>Last Location No.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>