sfSandBoxCode/force-app/main/default/objects/Area__c/fields/Sales_Asst_Mngr_EmployeeGUID__c.field-meta.xml
<CustomField>
    <fullName>Sales_Asst_Mngr_EmployeeGUID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Asst Mngr EmployeeGUID</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Areas (Sales Asst Mngr EmployeeGUID)</relationshipLabel>
    <relationshipName>Areas2</relationshipName>
    <type>Lookup</type>
</CustomField>