sfSandBoxCode/force-app/main/default/objects/Area__c/fields/Sales_SA_EmployeeGUID__c.field-meta.xml
<CustomField>
    <fullName>Sales_SA_EmployeeGUID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales SA EmployeeGUID</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Areas (Sales SA EmployeeGUID)</relationshipLabel>
    <relationshipName>Areas3</relationshipName>
    <type>Lookup</type>
</CustomField>